[gd_scene load_steps=6 format=4 uid="uid://1lk7hhuedunj"]

[ext_resource type="Script" path="res://Scripts/dungeon_start_room.gd" id="1_ge5h0"]
[ext_resource type="TileSet" uid="uid://8vgfu68kt2xc" path="res://Tile Sets/dungeon_floor.tres" id="2_i86cs"]
[ext_resource type="PackedScene" uid="uid://d0s43xkx8jx82" path="res://Scenes/player.tscn" id="2_yc2up"]
[ext_resource type="TileSet" uid="uid://cins26i84ryg1" path="res://Tile Sets/dungeon_walls.tres" id="3_5yyo0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4odbe"]

[node name="Dungeon Start Room" type="Node2D" node_paths=PackedStringArray("floor_tile_map", "walls_tile_map")]
script = ExtResource("1_ge5h0")
playerScene = ExtResource("2_yc2up")
floor_tile_map = NodePath("Floor")
walls_tile_map = NodePath("Floor/Walls")

[node name="Floor" type="TileMapLayer" parent="."]
position = Vector2(-9, 1)
tile_map_data = PackedByteArray("AAABAPX/AAABAAAAAAABAPb/AAABAAAAAAABAPf/AAABAAAAAAABAPj/AAABAAAAAAABAPn/AAABAAAAAAABAPr/AAABAAAAAAABAPv/AAABAAAAAAABAPz/AAABAAAAAAABAP3/AAABAAAAAAABAP7/AAABAAAAAAABAP//AAABAAAAAAABAAAAAAABAAAAAAACAPX/AAABAAAAAAACAPb/AAABAAAAAAACAPf/AAABAAAAAAACAPj/AAABAAAAAAACAPn/AAABAAAAAAACAPr/AAABAAAAAAACAPv/AAABAAAAAAACAPz/AAABAAAAAAACAP3/AAABAAAAAAACAP7/AAABAAAAAAACAP//AAABAAAAAAACAAAAAAABAAAAAAADAPX/AAABAAAAAAADAPb/AAABAAAAAAADAPf/AAABAAAAAAADAPj/AAABAAAAAAADAPn/AAABAAAAAAADAPr/AAABAAAAAAADAPv/AAABAAAAAAADAPz/AAABAAAAAAADAP3/AAABAAAAAAADAP7/AAABAAAAAAADAP//AAABAAAAAAADAAAAAAABAAAAAAAEAPX/AAABAAAAAAAEAPb/AAABAAAAAAAEAPf/AAABAAAAAAAEAPj/AAABAAAAAAAEAPn/AAABAAAAAAAEAPr/AAABAAAAAAAEAPv/AAABAAAAAAAEAPz/AAABAAAAAAAEAP3/AAABAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAAEAAAAAAABAAAAAAAFAPX/AAABAAAAAAAFAPb/AAABAAAAAAAFAPf/AAABAAAAAAAFAPj/AAABAAAAAAAFAPn/AAABAAAAAAAFAPr/AAABAAAAAAAFAPv/AAABAAAAAAAFAPz/AAABAAAAAAAFAP3/AAABAAAAAAAFAP7/AAABAAAAAAAFAP//AAABAAAAAAAFAAAAAAABAAAAAAAGAPX/AAABAAAAAAAGAPb/AAABAAAAAAAGAPf/AAABAAAAAAAGAPj/AAABAAAAAAAGAPn/AAABAAAAAAAGAPr/AAABAAAAAAAGAPv/AAABAAAAAAAGAPz/AAABAAAAAAAGAP3/AAABAAAAAAAGAP7/AAABAAAAAAAGAP//AAABAAAAAAAGAAAAAAABAAAAAAAHAPX/AAABAAAAAAAHAPb/AAABAAAAAAAHAPf/AAABAAAAAAAHAPj/AAABAAAAAAAHAPn/AAABAAAAAAAHAPr/AAABAAAAAAAHAPv/AAABAAAAAAAHAPz/AAABAAAAAAAHAP3/AAABAAAAAAAHAP7/AAABAAAAAAAHAP//AAABAAAAAAAHAAAAAAABAAAAAAAIAPX/AAABAAAAAAAIAPb/AAABAAAAAAAIAPf/AAABAAAAAAAIAPj/AAABAAAAAAAIAPn/AAABAAAAAAAIAPr/AAABAAAAAAAIAPv/AAABAAAAAAAIAPz/AAABAAAAAAAIAP3/AAABAAAAAAAIAP7/AAABAAAAAAAIAP//AAABAAAAAAAIAAAAAAABAAAAAAAJAPX/AAABAAAAAAAJAPb/AAABAAAAAAAJAPf/AAABAAAAAAAJAPj/AAABAAAAAAAJAPn/AAABAAAAAAAJAPr/AAABAAAAAAAJAPv/AAABAAAAAAAJAPz/AAABAAAAAAAJAP3/AAABAAAAAAAJAP7/AAABAAAAAAAJAP//AAABAAAAAAAJAAAAAAABAAAAAAAAAAAAAAABAAAAAAAAAP//AAABAAAAAAAAAP7/AAABAAAAAAAAAP3/AAABAAAAAAAAAPz/AAABAAAAAAAAAPv/AAABAAAAAAAAAPr/AAABAAAAAAAAAPb/AAABAAAAAAAAAPX/AAABAAAAAAAAAPf/AAABAAAAAAAAAPj/AAABAAAAAAAAAPn/AAABAAAAAAA=")
tile_set = ExtResource("2_i86cs")

[node name="Walls" type="TileMapLayer" parent="Floor"]
tile_map_data = PackedByteArray("AAAMAAUAAAADAAQAAAAMAAMAAAAAAAQAAAA=")
tile_set = ExtResource("3_5yyo0")

[node name="PlayerSpawnpoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(113, 42)

[node name="Door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(264, -51)
shape = SubResource("CircleShape2D_4odbe")

[node name="RoomCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Door" to="." method="_on_door_area_entered"]
[connection signal="timeout" from="RoomCooldownTimer" to="." method="_on_room_cooldown_timer_timeout"]
